src/python/pycasm/syntax/pycasmParser.py
# $ANTLR 3.1.3 Mar 18, 2009 10:09:25 /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g 2011-06-23 13:21:08

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *



# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
Alpha=16
DOT_DOT_BODY=20
DOT_DOT_NAME=13
Type=26
DOT_DOT_ARGS=18
AlphaNum=31
TYPED_VALUE=27
DOT_END=10
HexAlpha=32
HEX_DIGIT=24
DEDENT=4
Digit=30
HEX_DQUAD=22
EOF=-1
ROOT=33
HexDigit=25
SYM=35
INDENT=5
NAME=11
WS=14
NonWS=19
NEWLINE=9
HEX=34
BLOCK=6
ARGS=7
GEN=8
DOT_NAME=12
INDENT_OR_DEDENT=29
COMMENT=15
DOT_ARGS=17
HEX_QUAD=21
HEX_PAIR=23
STRING=28

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>", 
    "DEDENT", "INDENT", "BLOCK", "ARGS", "GEN", "NEWLINE", "DOT_END", "NAME", 
    "DOT_NAME", "DOT_DOT_NAME", "WS", "COMMENT", "Alpha", "DOT_ARGS", "DOT_DOT_ARGS", 
    "NonWS", "DOT_DOT_BODY", "HEX_QUAD", "HEX_DQUAD", "HEX_PAIR", "HEX_DIGIT", 
    "HexDigit", "Type", "TYPED_VALUE", "STRING", "INDENT_OR_DEDENT", "Digit", 
    "AlphaNum", "HexAlpha", "ROOT", "HEX", "SYM"
]




class pycasmParser(Parser):
    grammarFileName = "/root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g"
    antlr_version = version_str_to_tuple("3.1.3 Mar 18, 2009 10:09:25")
    antlr_version_str = "3.1.3 Mar 18, 2009 10:09:25"
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(pycasmParser, self).__init__(input, state, *args, **kwargs)

        self._state.ruleMemo = {}
        self.dfa4 = self.DFA4(
            self, 4,
            eot = self.DFA4_eot,
            eof = self.DFA4_eof,
            min = self.DFA4_min,
            max = self.DFA4_max,
            accept = self.DFA4_accept,
            special = self.DFA4_special,
            transition = self.DFA4_transition
            )

        self.dfa6 = self.DFA6(
            self, 6,
            eot = self.DFA6_eot,
            eof = self.DFA6_eof,
            min = self.DFA6_min,
            max = self.DFA6_max,
            accept = self.DFA6_accept,
            special = self.DFA6_special,
            transition = self.DFA6_transition
            )

        self.dfa7 = self.DFA7(
            self, 7,
            eot = self.DFA7_eot,
            eof = self.DFA7_eof,
            min = self.DFA7_min,
            max = self.DFA7_max,
            accept = self.DFA7_accept,
            special = self.DFA7_special,
            transition = self.DFA7_transition
            )



               
        from pycasm.syntax.errors import StandardErrorReporter
        self.patchInErrorReporter(StandardErrorReporter())




        self._adaptor = None
        self.adaptor = CommonTreeAdaptor()
                


        
    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)

              
    def patchInErrorReporter(self, reporterObject):
    	'''
    	Applies monkey patch to overload error reporting methods, all reporterObject\'s methods overload methods of this recognizer.
    	Not too pythonic, but handy.
    	'''
    	import functools
    	[setattr(self,method, functools.partial(getattr(reporterObject,method).im_func,self) ) for method in dir(reporterObject)\

                                    if callable(getattr(reporterObject, method))]

    def reportError(self, e):
    	super(self.__class__, self).reportError(e)
    	#raise e


    class root_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.root_return, self).__init__()

            self.tree = None




    # $ANTLR start "root"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:64:1: root : ( block | ( sp )+ )? EOF -> ^( ROOT ( block )? ) ;
    def root(self, ):

        retval = self.root_return()
        retval.start = self.input.LT(1)
        root_StartIndex = self.input.index()
        root_0 = None

        EOF3 = None
        block1 = None

        sp2 = None


        EOF3_tree = None
        stream_EOF = RewriteRuleTokenStream(self._adaptor, "token EOF")
        stream_sp = RewriteRuleSubtreeStream(self._adaptor, "rule sp")
        stream_block = RewriteRuleSubtreeStream(self._adaptor, "rule block")
        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 1):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:65:2: ( ( block | ( sp )+ )? EOF -> ^( ROOT ( block )? ) )
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:66:3: ( block | ( sp )+ )? EOF
                pass 
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:66:3: ( block | ( sp )+ )?
                alt2 = 3
                LA2 = self.input.LA(1)
                if LA2 == INDENT or LA2 == NAME or LA2 == DOT_NAME or LA2 == DOT_DOT_NAME or LA2 == HEX_QUAD or LA2 == HEX_DQUAD or LA2 == HEX_PAIR or LA2 == TYPED_VALUE or LA2 == STRING:
                    alt2 = 1
                elif LA2 == NEWLINE:
                    LA2_2 = self.input.LA(2)

                    if (self.synpred1_pycasmParser()) :
                        alt2 = 1
                    elif (self.synpred3_pycasmParser()) :
                        alt2 = 2
                elif LA2 == WS:
                    LA2_3 = self.input.LA(2)

                    if (self.synpred1_pycasmParser()) :
                        alt2 = 1
                    elif (self.synpred3_pycasmParser()) :
                        alt2 = 2
                if alt2 == 1:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:66:4: block
                    pass 
                    self._state.following.append(self.FOLLOW_block_in_root75)
                    block1 = self.block()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        stream_block.add(block1.tree)


                elif alt2 == 2:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:66:11: ( sp )+
                    pass 
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:66:11: ( sp )+
                    cnt1 = 0
                    while True: #loop1
                        alt1 = 2
                        LA1_0 = self.input.LA(1)

                        if (LA1_0 == NEWLINE or LA1_0 == WS) :
                            alt1 = 1


                        if alt1 == 1:
                            # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:0:0: sp
                            pass 
                            self._state.following.append(self.FOLLOW_sp_in_root78)
                            sp2 = self.sp()

                            self._state.following.pop()
                            if self._state.backtracking == 0:
                                stream_sp.add(sp2.tree)


                        else:
                            if cnt1 >= 1:
                                break #loop1

                            if self._state.backtracking > 0:
                                raise BacktrackingFailed

                            eee = EarlyExitException(1, self.input)
                            raise eee

                        cnt1 += 1



                EOF3=self.match(self.input, EOF, self.FOLLOW_EOF_in_root83) 
                if self._state.backtracking == 0:
                    stream_EOF.add(EOF3)

                # AST Rewrite
                # elements: block
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 67:3: -> ^( ROOT ( block )? )
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:67:6: ^( ROOT ( block )? )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(ROOT, "ROOT"), root_1)

                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:67:13: ( block )?
                    if stream_block.hasNext():
                        self._adaptor.addChild(root_1, stream_block.nextTree())


                    stream_block.reset();

                    self._adaptor.addChild(root_0, root_1)



                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 1, root_StartIndex, success)

            pass
        return retval

    # $ANTLR end "root"

    class sp_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.sp_return, self).__init__()

            self.tree = None




    # $ANTLR start "sp"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:70:1: sp : ( WS | NEWLINE )+ ->;
    def sp(self, ):

        retval = self.sp_return()
        retval.start = self.input.LT(1)
        sp_StartIndex = self.input.index()
        root_0 = None

        WS4 = None
        NEWLINE5 = None

        WS4_tree = None
        NEWLINE5_tree = None
        stream_WS = RewriteRuleTokenStream(self._adaptor, "token WS")
        stream_NEWLINE = RewriteRuleTokenStream(self._adaptor, "token NEWLINE")

        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 2):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:70:4: ( ( WS | NEWLINE )+ ->)
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:71:3: ( WS | NEWLINE )+
                pass 
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:71:3: ( WS | NEWLINE )+
                cnt3 = 0
                while True: #loop3
                    alt3 = 3
                    LA3_0 = self.input.LA(1)

                    if (LA3_0 == WS) :
                        LA3_2 = self.input.LA(2)

                        if (self.synpred4_pycasmParser()) :
                            alt3 = 1


                    elif (LA3_0 == NEWLINE) :
                        LA3_3 = self.input.LA(2)

                        if (self.synpred5_pycasmParser()) :
                            alt3 = 2




                    if alt3 == 1:
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:71:4: WS
                        pass 
                        WS4=self.match(self.input, WS, self.FOLLOW_WS_in_sp107) 
                        if self._state.backtracking == 0:
                            stream_WS.add(WS4)


                    elif alt3 == 2:
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:71:7: NEWLINE
                        pass 
                        NEWLINE5=self.match(self.input, NEWLINE, self.FOLLOW_NEWLINE_in_sp109) 
                        if self._state.backtracking == 0:
                            stream_NEWLINE.add(NEWLINE5)


                    else:
                        if cnt3 >= 1:
                            break #loop3

                        if self._state.backtracking > 0:
                            raise BacktrackingFailed

                        eee = EarlyExitException(3, self.input)
                        raise eee

                    cnt3 += 1

                # AST Rewrite
                # elements: 
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 71:17: ->
                    root_0 = None


                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 2, sp_StartIndex, success)

            pass
        return retval

    # $ANTLR end "sp"

    class block_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.block_return, self).__init__()

            self.tree = None




    # $ANTLR start "block"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:74:1: block : h= block_head ( block_chain )* -> { not isinstance($h.tree, type(None)) }? ^( BLOCK block_head ( block_chain )* ) ->;
    def block(self, ):

        retval = self.block_return()
        retval.start = self.input.LT(1)
        block_StartIndex = self.input.index()
        root_0 = None

        h = None

        block_chain6 = None


        stream_block_chain = RewriteRuleSubtreeStream(self._adaptor, "rule block_chain")
        stream_block_head = RewriteRuleSubtreeStream(self._adaptor, "rule block_head")
        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 3):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:75:2: (h= block_head ( block_chain )* -> { not isinstance($h.tree, type(None)) }? ^( BLOCK block_head ( block_chain )* ) ->)
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:76:3: h= block_head ( block_chain )*
                pass 
                self._state.following.append(self.FOLLOW_block_head_in_block128)
                h = self.block_head()

                self._state.following.pop()
                if self._state.backtracking == 0:
                    stream_block_head.add(h.tree)
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:77:3: ( block_chain )*
                while True: #loop4
                    alt4 = 2
                    alt4 = self.dfa4.predict(self.input)
                    if alt4 == 1:
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:0:0: block_chain
                        pass 
                        self._state.following.append(self.FOLLOW_block_chain_in_block132)
                        block_chain6 = self.block_chain()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            stream_block_chain.add(block_chain6.tree)


                    else:
                        break #loop4

                # AST Rewrite
                # elements: block_head, block_chain
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                if self._state.backtracking == 0:

                    retval.tree = root_0

                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    if not isinstance(h.tree, type(None)) :
                        # 78:3: -> { not isinstance($h.tree, type(None)) }? ^( BLOCK block_head ( block_chain )* )
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:78:47: ^( BLOCK block_head ( block_chain )* )
                        root_1 = self._adaptor.nil()
                        root_1 = self._adaptor.becomeRoot(self._adaptor.createFromType(BLOCK, "BLOCK"), root_1)

                        self._adaptor.addChild(root_1, stream_block_head.nextTree())
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:78:66: ( block_chain )*
                        while stream_block_chain.hasNext():
                            self._adaptor.addChild(root_1, stream_block_chain.nextTree())


                        stream_block_chain.reset();

                        self._adaptor.addChild(root_0, root_1)


                    else: 
                        # 79:3: ->
                        root_0 = None

                    retval.tree = root_0



                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 3, block_StartIndex, success)

            pass
        return retval

    # $ANTLR end "block"

    class block_head_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.block_head_return, self).__init__()

            self.tree = None




    # $ANTLR start "block_head"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:82:1: block_head : ( chain_element | block_chain );
    def block_head(self, ):

        retval = self.block_head_return()
        retval.start = self.input.LT(1)
        block_head_StartIndex = self.input.index()
        root_0 = None

        chain_element7 = None

        block_chain8 = None



        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 4):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:83:2: ( chain_element | block_chain )
                alt5 = 2
                LA5_0 = self.input.LA(1)

                if (LA5_0 == NAME or (HEX_QUAD <= LA5_0 <= HEX_PAIR) or (TYPED_VALUE <= LA5_0 <= STRING)) :
                    alt5 = 1
                elif (LA5_0 == DOT_NAME) and ((self.input.LT(1).getCharPositionInLine() == 0 or self.input.LT(-1) and self.input.LT(-1).getType() in [INDENT, DEDENT, NEWLINE] )):
                    alt5 = 2
                elif (LA5_0 == INDENT or LA5_0 == NEWLINE or (DOT_DOT_NAME <= LA5_0 <= WS)) :
                    alt5 = 2
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed

                    nvae = NoViableAltException("", 5, 0, self.input)

                    raise nvae

                if alt5 == 1:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:84:3: chain_element
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_chain_element_in_block_head165)
                    chain_element7 = self.chain_element()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, chain_element7.tree)


                elif alt5 == 2:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:85:4: block_chain
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_block_chain_in_block_head170)
                    block_chain8 = self.block_chain()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, block_chain8.tree)


                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 4, block_head_StartIndex, success)

            pass
        return retval

    # $ANTLR end "block_head"

    class block_chain_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.block_chain_return, self).__init__()

            self.tree = None




    # $ANTLR start "block_chain"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:88:1: block_chain : ( space_element )+ ( chain_element )? ;
    def block_chain(self, ):

        retval = self.block_chain_return()
        retval.start = self.input.LT(1)
        block_chain_StartIndex = self.input.index()
        root_0 = None

        space_element9 = None

        chain_element10 = None



        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 5):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:89:2: ( ( space_element )+ ( chain_element )? )
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:90:3: ( space_element )+ ( chain_element )?
                pass 
                root_0 = self._adaptor.nil()

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:90:3: ( space_element )+
                cnt6 = 0
                while True: #loop6
                    alt6 = 2
                    alt6 = self.dfa6.predict(self.input)
                    if alt6 == 1:
                        # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:0:0: space_element
                        pass 
                        self._state.following.append(self.FOLLOW_space_element_in_block_chain183)
                        space_element9 = self.space_element()

                        self._state.following.pop()
                        if self._state.backtracking == 0:
                            self._adaptor.addChild(root_0, space_element9.tree)


                    else:
                        if cnt6 >= 1:
                            break #loop6

                        if self._state.backtracking > 0:
                            raise BacktrackingFailed

                        eee = EarlyExitException(6, self.input)
                        raise eee

                    cnt6 += 1
                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:90:18: ( chain_element )?
                alt7 = 2
                alt7 = self.dfa7.predict(self.input)
                if alt7 == 1:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:0:0: chain_element
                    pass 
                    self._state.following.append(self.FOLLOW_chain_element_in_block_chain186)
                    chain_element10 = self.chain_element()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, chain_element10.tree)






                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 5, block_chain_StartIndex, success)

            pass
        return retval

    # $ANTLR end "block_chain"

    class chain_element_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.chain_element_return, self).__init__()

            self.tree = None




    # $ANTLR start "chain_element"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:93:1: chain_element : ( sym_name | generative | hex_code );
    def chain_element(self, ):

        retval = self.chain_element_return()
        retval.start = self.input.LT(1)
        chain_element_StartIndex = self.input.index()
        root_0 = None

        sym_name11 = None

        generative12 = None

        hex_code13 = None



        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 6):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval

                # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:94:2: ( sym_name | generative | hex_code )
                alt8 = 3
                LA8 = self.input.LA(1)
                if LA8 == NAME:
                    alt8 = 1
                elif LA8 == TYPED_VALUE or LA8 == STRING:
                    alt8 = 2
                elif LA8 == HEX_QUAD or LA8 == HEX_DQUAD or LA8 == HEX_PAIR:
                    alt8 = 3
                else:
                    if self._state.backtracking > 0:
                        raise BacktrackingFailed

                    nvae = NoViableAltException("", 8, 0, self.input)

                    raise nvae

                if alt8 == 1:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:94:4: sym_name
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_sym_name_in_chain_element198)
                    sym_name11 = self.sym_name()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, sym_name11.tree)


                elif alt8 == 2:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:95:4: generative
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_generative_in_chain_element203)
                    generative12 = self.generative()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, generative12.tree)


                elif alt8 == 3:
                    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:96:4: hex_code
                    pass 
                    root_0 = self._adaptor.nil()

                    self._state.following.append(self.FOLLOW_hex_code_in_chain_element208)
                    hex_code13 = self.hex_code()

                    self._state.following.pop()
                    if self._state.backtracking == 0:
                        self._adaptor.addChild(root_0, hex_code13.tree)


                retval.stop = self.input.LT(-1)

                if self._state.backtracking == 0:

                    retval.tree = self._adaptor.rulePostProcessing(root_0)
                    self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)


                success = True
            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)
        finally:
            if self._state.backtracking > 0:
                self.memoize(self.input, 6, chain_element_StartIndex, success)

            pass
        return retval

    # $ANTLR end "chain_element"

    class space_element_return(ParserRuleReturnScope):
        def __init__(self):
            super(pycasmParser.space_element_return, self).__init__()

            self.tree = None




    # $ANTLR start "space_element"
    # /root/Desktop/pycasm/pycasm//src/antlr3/pythonTarget/pycasmParser.g:99:1: space_element : ( directive | unrestricted_directive | ( NEWLINE )? INDENT block ( NEWLINE )? ( DEDENT )? | sp );
    def space_element(self, ):

        retval = self.space_element_return()
        retval.start = self.input.LT(1)
        space_element_StartIndex = self.input.index()
        root_0 = None

        NEWLINE16 = None
        INDENT17 = None
        NEWLINE19 = None
        DEDENT20 = None
        directive14 = None

        unrestricted_directive15 = None

        block18 = None

        sp21 = None


        NEWLINE16_tree = None
        INDENT17_tree = None
        NEWLINE19_tree = None
        DEDENT20_tree = None

        success = False
        try:
            try:
                if self._state.backtracking > 0 and self.alreadyParsedRule(self.input, 7):
                    # for cached failed rules, alreadyParsedRule will raise an exception
                    success = True
                    return retval
